[package]
name = "josefine"
version = "0.0.1"
edition = "2021"

[lib]
path = "src/lib.rs"
name = "josefine"

[[bin]]
bench = false
path = "src/main.rs"
name = "josefine"

[dependencies]
anyhow = "1.0.52"
async-trait = "0.1.51"
bincode = "1.3.3"
byteorder = "1.4.3"
bytes = "1.0.1"
clap = "2.33.3"
config = "0.11.0"
ctrlc = "3.2.1"
derive_more = "0.99.17"
futures = "0.3.15"
futures-util = "0.3.15"
kafka-protocol = "0.1.0"
memmap = "0.7.0"
rand = "0.8.4"
regex = "1.5.4"
serde = "1.0.126"
serde_derive = "1.0.126"
serde_json = "1.0.64"
sled = "0.34.6"
string = "0.3.0"
tempfile = "3.2.0"
tokio = { version = "1.24.2", features = ["macros", "net", "io-util", "time", "sync", "rt", "rt-multi-thread", "tracing"] }
tokio-serde = { version = "0.8.0", features = ["json"] }
tokio-stream = "0.1.7"
tokio-tower = "0.6.0"
tokio-util = { version = "0.6.7", features = ["codec"] }
tower = "0.4.1"
tracing = "0.1"
tracing-appender = "0.2.0"
tracing-futures = "0.2.5"
tracing-subscriber = "0.2"
tracing-test = "0.1"
uuid = { version = "0.8.2", features = [ "v4", "serde" ] }
