[package]
name = "josefine"
version = "0.0.1"
edition = "2021"

[lib]
path = "src/lib.rs"
name = "josefine"

[[bin]]
bench = false
path = "src/main.rs"
name = "josefine"

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.73"
bincode = "1.3.3"
byteorder = "1.4.3"
bytes = "1.5.0"
clap = { version = "4.4.3", features = ["derive"] }
config = "0.13.3"
ctrlc = "3.4.1"
derive_more = "0.99.17"
futures = "0.3.28"
futures-util = "0.3.28"
kafka-protocol = "0.7.0"
memmap = "0.7.0"
rand = "0.8.5"
regex = "1.9.5"
serde = "1.0.188"
serde_derive = "1.0.188"
serde_json = "1.0.107"
sled = "0.34.7"
string = "0.3.0"
tempfile = "3.8.0"
tokio = { version = "1.32.0", features = ["macros", "net", "io-util", "time", "sync", "rt", "rt-multi-thread", "tracing"] }
tokio-serde = { version = "0.8.0", features = ["json"] }
tokio-stream = "0.1.14"
tokio-tower = "0.6.0"
tokio-util = { version = "0.7.8", features = ["codec"] }
tower = "0.4.13"
tracing = "0.1"
tracing-appender = "0.2.2"
tracing-futures = "0.2.5"
tracing-subscriber = "0.3"
tracing-test = "0.2"
uuid = { version = "1.4.1", features = [ "v4", "serde" ] }
