[package]
name = "josefine-broker"
version = "0.0.1"
authors = ["jcm <jmcelwain@gmail.com>"]
edition = "2018"

[dependencies]
memmap = "0.7.0"
byteorder = "1.2.7"
slog = "2.4.1"
slog-async = "2.3.0"
slog-term = "2.4.0"
futures = "~0.3.4"
tokio = { version = "~1.8.0", features = ["macros", "net", "io-util", "time", "sync", "rt", "rt-multi-thread"] }
tokio-stream = "~0.1.0"
tokio-serde = { version = "~0.8", features = ["bincode"] }
tokio-util = { version = "~0.6.0", features = ["codec"] }
josefine-raft = { version = "0.0.1", path = "../josefine-raft" }
josefine-core = { version = "0.0.1", path = "../josefine-core" }
josefine-kafka = { version = "0.0.1", path = "../josefine-kafka" }
kafka_protocol = { version = "0.1", git = "https://github.com/0x1991babe/kafka-protocol-rs", branch = "main" }
