[package]
name = "josefine-broker"
version = "0.0.1"
authors = ["jcm <jmcelwain@gmail.com>"]
edition = "2018"

[dependencies]
memmap = "0.7.0"
byteorder = "1.4.3"
slog = { version = "2.7.0", features = ["max_level_trace"] }
slog-async = "2.6.0"
slog-term = "2.8.0"
slog-stdlog = "4.1.0"
slog-envlogger = "2.2.0"
serde = "1.0.126"
serde_derive = "1.0.126"
bincode = "1.3.3"
sled = "0.34.6"
string = { version = "0.3.0", git = "https://github.com/0x1991babe/string.git", features = ["bytes"] }
uuid = { version = "0.8.2", features = [ "v4", "serde" ] }
futures = "0.3.15"
tokio = { version = "1.8.1", features = ["macros", "net", "io-util", "time", "sync", "rt", "rt-multi-thread"] }
tokio-stream = "0.1.7"
tokio-util = { version = "0.6.7", features = ["codec"] }
bytes = "1.0.1"
josefine-raft = { version = "0.0.1", path = "../josefine-raft" }
josefine-core = { version = "0.0.1", path = "../josefine-core" }
josefine-kafka = { version = "0.0.1", path = "../josefine-kafka" }
kafka_protocol = { version = "0.1", git = "https://github.com/0x1991babe/kafka-protocol-rs", branch = "main" }
