[package]
name = "josefine-core"
version = "0.0.1"
authors = ["jcm <jmcelwain@gmail.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[dependencies]
slog = { version = "2.4.1", features = ["max_level_debug"]}
slog-async = "2.3.0"
slog-term = "2.4.0"
serde = "~1.0.91"
serde_derive = "~1.0.91"
serde_json = "1.0"
lazy_static = "~1.4.0"
futures = "~0.3.4"
futures-util = "~0.3.4"
tokio = { version = "~1.0.0", features = ["macros", "net", "io-util", "time", "sync", "rt", "rt-multi-thread"] }
tokio-stream = "~0.1.0"
tokio-serde = { version = "~0.8", features = ["json"] }
tokio-util = { version = "~0.6.0", features = ["codec"] }