[package]
name = "josefine-core"
version = "0.0.1"
authors = ["jcm <jmcelwain@gmail.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[dependencies]
slog = { version = "2.7.0", features = ["max_level_trace"] }
slog-async = "2.6.0"
slog-term = "2.8.0"
slog-stdlog = "4.1.0"
slog-envlogger = "2.2.0"
serde = "1.0.126"
serde_derive = "1.0.126"
serde_json = "1.0.64"
bincode = "1.3.3"
sled = "0.34.6"
lazy_static = "1.4.0"
futures = "0.3.15"
futures-util = "0.3.15"
tokio = { version = "1.8.1", features = ["macros", "net", "io-util", "time", "sync", "rt", "rt-multi-thread"] }
tokio-stream = "0.1.7"
tokio-serde = { version = "0.8.0", features = ["json"] }
tokio-util = { version = "0.6.7", features = ["codec"] }
