[package]
name = "josefine-kafka"
version = "0.0.1"
authors = ["jcm <jmcelwain@gmail.com>"]
edition = "2018"

[dependencies]
varint = "0.9.0"
uuid = "0.8.1"
serde = "~1.0.91"
serde_derive = "~1.0.91"
josefine-core = { version = "0.0.1", path = "../josefine-core" }
bytes = "1.0.1"
byteorder = "1.4.3"