[package]
name = "josefine-kafka"
version = "0.0.1"
authors = ["jcm <jmcelwain@gmail.com>"]
edition = "2018"

[dependencies]
varint = "0.9.0"
uuid = "0.8.2"
bytes = "1.0.1"
kafka_protocol = { version = "0.1", git = "https://github.com/0x1991babe/kafka-protocol-rs", branch = "main" }
tokio = { version = "1.8.1", features = ["macros", "net", "io-util", "time", "sync", "rt", "rt-multi-thread"] }
tokio-stream = "0.1.7"
tokio-util = { version = "0.6.7", features = ["codec"] }
