[package]
name = "josefine-raft"
version = "0.0.1"
authors = ["jcm <jmcelwain@gmail.com>"]
edition = "2018"

[dependencies]
slog = { version = "2.4.1", features = ["max_level_debug"]}
slog-async = "2.3.0"
slog-term = "2.4.0"
serde = "1.0.84"
serde_derive = "1.0.84"
serde_json = "1.0"
rand = "0.6"
lazy_static = "1.3.0"
snafu = "0.4.1"
config = "0.9"
tokio = { version = "~0.2.18", features = ["macros", "rt-core", "rt-threaded", "net", "tcp", "stream", "io-util", "time", "blocking", "sync"] }
tokio-serde = { version = "~0.6.1", features = ["bincode"] }
tokio-util = { version = "~0.3.1", features = ["codec"] }