[package]
name = "josefine-raft"
version = "0.0.1"
authors = ["jcm <jmcelwain@gmail.com>"]
edition = "2018"

[dependencies]
slog = { version = "2.4.1", features = ["max_level_debug"]}
slog-async = "2.3.0"
slog-term = "2.4.0"
bincode = "~1.3.1"
clap = "~2.33.0"
config = "~0.10.1"
derivative = "~2.1.0"
futures = "~0.3.4"
futures-util = "~0.3.4"
lazy_static = "~1.4.0"
log = "~0.4.6"
names = "~0.11.0"
rand = "~0.8.3"
regex = "~1.3.1"
serde = "~1.0.91"
serde_derive = "~1.0.91"
serde_json = "1.0"
simplelog = "0.8.0"
tokio = { version = "~1.0.0", features = ["macros", "net", "io-util", "time", "sync", "rt", "rt-multi-thread"] }
tokio-stream = "~0.1.0"
tokio-serde = { version = "~0.8", features = ["json"] }
tokio-util = { version = "~0.6.0", features = ["codec"] }
bytes = "1.0.1"
uuid = { version = "~0.8.1", features = ["v4"] }
josefine-core = { version = "0.0.1", path = "../josefine-core" }