[package]
name = "josefine-raft"
version = "0.0.1"
authors = ["jcm <jmcelwain@gmail.com>"]
edition = "2018"

[dependencies]
slog = { version = "2.7.0", features = ["max_level_trace"] }
slog-async = "2.6.0"
slog-term = "2.8.0"
slog-stdlog = "4.1.0"
slog-envlogger = "2.2.0"
bincode = "1.3.3"
clap = "2.33.3"
config = "0.11.0"
derivative = "2.2.0"
futures = "0.3.15"
futures-util = "0.3.15"
lazy_static = "1.4.0"
log = "0.4.14"
names = "0.11.0"
rand = "0.8.4"
regex = "1.5.4"
serde = "1.0.126"
serde_derive = "1.0.126"
serde_json = "1.0.64"
simplelog = "0.10.0"
tokio = { version = "1.8.1", features = ["macros", "net", "io-util", "time", "sync", "rt", "rt-multi-thread"] }
tokio-stream = "0.1.7"
tokio-serde = { version = "0.8.0", features = ["json"] }
tokio-util = { version = "0.6.7", features = ["codec"] }
bytes = "1.0.1"
uuid = { version = "0.8.2", features = ["v4"] }
josefine-core = { version = "0.0.1", path = "../josefine-core" }
